<resources>
    <string name="app_name">Currency Converter</string>

    <string name="connection_error">Connection Error</string>
    <string name="something_wrong_happen">Something went wrong</string>
    <string name="server_error">Server Error</string>
    <string name="time_out_error">Time out error</string>
    <string name="back_to_home_page">Back to Homepage</string>
    <string name="server_error_body">Server error please try again later</string>
    <string name="no_data_to_preview">No data to Preview</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_body">oh,no you haven\'t internet connection to reach our data, please check connection and try again.</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="show_more">Show More</string>
    <string name="other_currencies">Other Currencies</string>
    <string name="last_3_days">Last 3 Days</string>
    <string name="historical_data_from_to">From %1$s To %2$s</string>
    <string name="historical_exchange_rate">Historical Exchange Rate</string>
    <string name="api_error_occured">Api Error Occured , try again later</string>


    <string-array name="currencies">
        <item>USD</item>
        <item>AUD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>ISK</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RON</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>ZAR</item>
    </string-array>

</resources>