<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:textColor="@color/primary_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/historical_data_from_to"/>


    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_200dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsTitle"/>

    <View
        android:id="@+id/viewBelowChart"
        android:layout_width="match_parent"
        android:background="@color/purple_700"
        android:layout_height="@dimen/dimen_1dp"
        app:layout_constraintTop_toBottomOf="@+id/chart"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHistoricalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:textColor="@color/primary_500"
        app:layout_constraintEnd_toStartOf="@+id/rvOther"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart"
        android:text="@string/last_3_days"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistoricalData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        tools:itemCount="3"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/rv_history_data_item"
        app:layout_constraintEnd_toStartOf="@+id/rvOther"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoricalTitle"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rvHistoricalData"
        app:layout_constraintTop_toBottomOf="@+id/viewBelowChart"
        app:layout_constraintEnd_toStartOf="@+id/rvOther"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOtherTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:textColor="@color/primary_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart"
        android:text="@string/other_currencies"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOther"
        android:layout_width="@dimen/dimen_160dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOtherTitle"
        app:layout_constraintBottom_toBottomOf="parent"/>



    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/dimen_50dp"
        android:layout_height="@dimen/dimen_50dp"
        android:visibility="invisible"
        android:elevation="@dimen/dimen_20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>






</androidx.constraintlayout.widget.ConstraintLayout>